Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/astrofuncdll.ads


    -- Computes the Moon position at the specified time.
    procedure CompMoonPos
        (ds50ET            :         Long_Float;
        uvecMoon           : out     Double1D;
        moonVecMag         : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "CompMoonPos";
        --uvecMoon           : Double1D  (1..3);

    -- This function is intended for future use.  No information is currently available.
    -- This function is intended for future use.  No information is currently available.
    procedure AstroConvFrTo
        (xf_Conv           :         Integer;
        frArr              : in      Double1D;
        toArr              : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "AstroConvFrTo";
        --frArr              : Double1D  (1..128);
        --toArr              : Double1D  (1..128);

    -- Converts right ascension and declination to vector triad LAD in topocentric equatorial coordinate system.
    procedure RADecToLAD
        (ra                :         Long_Float;
        dec                :         Long_Float;
        l                  : out     Double1D;
        a_tilde            : out     Double1D;
        d_tilde            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "RADecToLAD";
        --l                  : Double1D  (1..3);
        --a_tilde            : Double1D  (1..3);
        --d_tilde            : Double1D  (1..3);

    -- Converts azimuth and elevation to vector triad LAD in topocentric horizontal coordinate system.
    procedure AzElToLAD
        (az                :         Long_Float;
        el                 :         Long_Float;
        lh                 : out     Double1D;
        ah                 : out     Double1D;
        dh                 : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "AzElToLAD";
        --lh                 : Double1D  (1..3);
        --ah                 : Double1D  (1..3);
        --dh                 : Double1D  (1..3);

    -- Converts satellite ECI position/velocity vectors and sensor location to topocentric components.
    -- The xa_topo array has the following structure:
    -- [0]: Resulting right ascension (RA) (deg)
    -- [1]: Declination (deg)
    -- [2]: Azimuth (deg)
    -- [3]: Elevation (deg)
    -- [4]: Range (km)
    -- [5]: RAdot (first derivative of right ascension) (deg/s)
    -- [6]: DecDot (first derivative of declination) (deg/s)
    -- [7]: AzDot (first derivative of azimuth) (deg/s)
    -- [8]: ElDot (first derivative of elevation) (deg/s)
    -- [9]: RangeDot (first derivative of range) (km/s)   
    procedure ECIToTopoComps
        (theta             :         Long_Float;
        lat                :         Long_Float;
        senPos             : in      Double1D;
        satPos             : in      Double1D;
        satVel             : in      Double1D;
        xa_topo            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ECIToTopoComps";
        --senPos             : Double1D  (1..3);
        --satPos             : Double1D  (1..3);
        --satVel             : Double1D  (1..3);
        --xa_topo            : Double1D  (1..10);

    -- Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
    procedure RaDecToAzEl
        (thetaG            :         Long_Float;
        lat                :         Long_Float;
        lon                :         Long_Float;
        ra                 :         Long_Float;
        dec                :         Long_Float;
        az                 : out     Long_Float;
        el                 : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "RaDecToAzEl";

    -- Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
    procedure RaDecToAzElTime
        (ds50UTC           :         Long_Float;
        lat                :         Long_Float;
        lon                :         Long_Float;
        ra                 :         Long_Float;
        dec                :         Long_Float;
        az                 : out     Long_Float;
        el                 : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "RaDecToAzElTime";

    -- Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
    procedure AzElToRaDec
        (thetaG            :         Long_Float;
        lat                :         Long_Float;
        lon                :         Long_Float;
        az                 :         Long_Float;
        el                 :         Long_Float;
        ra                 : out     Long_Float;
        dec                : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "AzElToRaDec";

    -- Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
    procedure AzElToRaDecTime
        (ds50UTC           :         Long_Float;
        lat                :         Long_Float;
        lon                :         Long_Float;
        az                 :         Long_Float;
        el                 :         Long_Float;
        ra                 : out     Long_Float;
        dec                : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "AzElToRaDecTime";

    -- Converts full state RAE (range, az, el, and their rates) to full state ECI (position and velocity)
    -- The xa_rae array has the following structure:
    -- [0]: Range (km)
    -- [1]: Azimuth (deg)
    -- [2]: Elevation (deg)
    -- [3]: Range Dot (km/s)
    -- [4]: Azimuth Dot (deg/s)
    -- [5]: Elevation Dot (deg/s)
    procedure RAEToECI
        (theta             :         Long_Float;
        astroLat           :         Long_Float;
        xa_rae             : in      Double1D;
        senPos             : in      Double1D;
        satPos             : out     Double1D;
        satVel             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "RAEToECI";
        --xa_rae             : Double1D  (1..6);
        --senPos             : Double1D  (1..3);
        --satPos             : Double1D  (1..3);
        --satVel             : Double1D  (1..3);

    -- Computes initial values for the SGP drag term nDot and the SGP4 drag term BSTAR based upon eccentricity and semi-major axis.
    procedure GetInitialDrag
        (semiMajorAxis     :         Long_Float;
        eccen              :         Long_Float;
        nDot               : out     Long_Float;
        bstar              : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "GetInitialDrag";

    -- Converts covariance matrix PTW to UVW.
    -- PTW = P: TxW, T: along velocity direction, W: pos x vel.
    -- UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
    procedure CovMtxPTWToUVW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        ptwCovMtx          : in      Double2D;
        uvwCovMtx          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxPTWToUVW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --ptwCovMtx          : Double2D  (1..6,1..6);
        --uvwCovMtx          : Double2D  (1..6,1..6);

    -- Converts covariance matrix UVW to PTW.
    -- PTW = P: TxW, T: along velocity direction, W: pos x vel.
    -- UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
    procedure CovMtxUVWToPTW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        uvwCovMtx          : in      Double2D;
        ptwCovMtx          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxUVWToPTW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --uvwCovMtx          : Double2D  (1..6,1..6);
        --ptwCovMtx          : Double2D  (1..6,1..6);

    -- Computes Earth/Sensor/Earth Limb and Earth/Sensor/Satellite angles.
    procedure EarthObstructionAngles
        (earthLimb         :         Long_Float;
        satECI             : in      Double1D;
        senECI             : in      Double1D;
        earthSenLimb       : out     Long_Float;
        earthSenSat        : out     Long_Float;
        satEarthSen        : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "EarthObstructionAngles";
        --satECI             : Double1D  (1..3);
        --senECI             : Double1D  (1..3);

    -- Determines if a point in space is sunlit at the input time ds50ET
    function IsPointSunlit
        (ds50ET            :         Long_Float;
        ptEci              : in      Double1D) return Integer
    with Import => True,
        Convention => C,
        External_Name => "IsPointSunlit";
        --ptEci              : Double1D  (1..3);

    -- Rotates Right Ascension and Declination to specified epoch
    procedure RotRADecl
        (nutationTerms     :         Integer;
        dir                :         Integer;
        ds50UTCIn          :         Long_Float;
        raIn               :         Long_Float;
        declIn             :         Long_Float;
        ds50UTCOut         :         Long_Float;
        raOut              : out     Long_Float;
        declOut            : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "RotRADecl";

    -- Rotates Right Ascension and Declination from TEME of Date to MEME of the specified year of equinox
    function RotRADec_DateToEqnx
        (nutationTerms     :         Integer;
        yrOfEqnx           :         Integer;
        ds50UTCIn          :         Long_Float;
        raIn               :         Long_Float;
        declIn             :         Long_Float;
        raOut              : out     Long_Float;
        declOut            : out     Long_Float) return Integer
    with Import => True,
        Convention => C,
        External_Name => "RotRADec_DateToEqnx";

    -- Rotates Right Ascension and Declination from MEME of the specified year of equinox to TEME of Date
    function RotRADec_EqnxToDate
        (nutationTerms     :         Integer;
        yrOfEqnx           :         Integer;
        ds50UTCIn          :         Long_Float;
        raIn               :         Long_Float;
        declIn             :         Long_Float;
        raOut              : out     Long_Float;
        declOut            : out     Long_Float) return Integer
    with Import => True,
        Convention => C,
        External_Name => "RotRADec_EqnxToDate";
